# Proyecto-SO

./: 1.cpp  CMakeLists.txt  build_optimized_test  problema
includes/: hnsw_utils.hpp  memory_utils.hpp  metrics_collector.hpp  timing.hpp
scripts/: setup.sh
src/: build_optimized.cpp  debug_build.cpp  hnsw_query_basic.cpp  hnswn_build_basic.cpp  query_optimized.cpp
